diesel_compile_tests/tests/fail/derive_deprecated/deprecated_sql_type.stderr
error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(sql_type = Foo)]`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:10:3
   |
10 | #[sql_type]
   |   ^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:14:11
   |
14 | #[sql_type()]
   |           ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:18:14
   |
18 | #[sql_type = 1]
   |              ^

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:22:14
   |
22 | #[sql_type = "1"]
   |              ^^^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(sql_type = Foo)]`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:33:7
   |
33 |     #[sql_type]
   |       ^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:39:15
   |
39 |     #[sql_type()]
   |               ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:45:18
   |
45 |     #[sql_type = 1]
   |                  ^

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:51:18
   |
51 |     #[sql_type = "1"]
   |                  ^^^

error[E0412]: cannot find type `foo` in this scope
 --> tests/fail/derive_deprecated/deprecated_sql_type.rs:6:14
  |
6 | #[sql_type = "foo"]
  |              ^^^^^ not found in this scope

error[E0412]: cannot find type `foo` in this scope
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:27:18
   |
27 |     #[sql_type = "foo"]
   |                  ^^^^^ not found in this scope

error[E0277]: cannot deserialize a value of the database type `_` as `i32`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:25:10
   |
25 | #[derive(QueryableByName)]
   |          ^^^^^^^^^^^^^^^ the trait `FromSql<_, __DB>` is not implemented for `i32`
   |
   = note: double check your type mappings via the documentation of `_`
   = help: the following other types implement trait `FromSql<A, DB>`:
             <i32 as FromSql<diesel::sql_types::Integer, Mysql>>
             <i32 as FromSql<diesel::sql_types::Integer, Pg>>
             <i32 as FromSql<diesel::sql_types::Integer, Sqlite>>
note: required by a bound in `diesel::row::NamedRow::get`
  --> $DIESEL/src/row.rs
   |
   |     fn get<ST, T>(&self, column_name: &str) -> deserialize::Result<T>
   |        --- required by a bound in this associated function
   |     where
   |         T: FromSql<ST, DB>;
   |            ^^^^^^^^^^^^^^^ required by this bound in `NamedRow::get`
   = note: this error originates in the derive macro `QueryableByName` (in Nightly builds, run with -Z macro-backtrace for more info)
